Fix submenu item alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -464,7 +464,7 @@ ul.primary-tabs.links {
             border-radius: 0px 5px 5px 0px;
           }
       }
-      &.dropdown.open a {
+      &.dropdown.open>a {
         background-color: #f8f8f8;
         width: 90%;
         text-align: left;
@@ -490,10 +490,9 @@ ul.primary-tabs.links {
       }
     }
   
-  &>.tb-megamenu-submenu {
-      li a {
-        text-align: left;
-      }
+    .tb-megamenu-subnav li a {
+      width: 90%;
+      text-align: left;
     }
   }
 }
